Create darker versions of light state colours

--- a/stylesheets/_palette.projector.scss
+++ b/stylesheets/_palette.projector.scss
@@ -80,41 +80,41 @@ $palette-states: (
     primary: (
         base:  #2575b0,
         alt:   pick_best_color(#2575b0, (#fff, #000)),
-        light: lighten(#2575b0, 45),
+        light: lighten(#2575b0, 45 - $darken-factor),
         dark:  darken(#2575b0, 5)
     ),
     success: (
         base:  #297c46,
         alt:   pick_best_color(#297c46, (#fff, #000)),
-        light: lighten(#297c46, 55),
+        light: lighten(#297c46, 55 - $darken-factor),
         dark:  darken(#297c46, 5),
         flash: rgb(0, 153, 51),
     ),
     warning: (
         base:  #eaa96a,
         alt:   pick_best_color(#eaa96a, (#fff, #000)),
-        light: lighten(#eaa96a, 25),
+        light: lighten(#eaa96a, 25 - $darken-factor),
         dark:  darken(#eaa96a, 35),
         flash: rgb(255, 137, 9)
     ),
     danger: (
         base:  #c84d40,
         alt:   pick_best_color(#c84d40, (#fff, #000)),
-        light: lighten(#c84d40, 40),
+        light: lighten(#c84d40, 40 - $darken-factor),
         dark:  darken(#c84d40, 5),
         flash: rgb(204, 51, 51)
     ),
     info: (
         base:  map-get(map-get($palette-branding, jadu-blue), pale),
         alt:   pick_best_color(map-get(map-get($palette-branding, jadu-blue), pale), (#fff, #000)),
-        light: lighten(map-get(map-get($palette-branding, jadu-blue), pale), 15),
+        light: lighten(map-get(map-get($palette-branding, jadu-blue), pale), 5),
         dark:  darken(map-get(map-get($palette-branding, jadu-blue), pale), 40),
         flash: map-get(map-get($palette-branding, jadu-blue), pale)
     ),
     inverse: (
         base:  map-get(map-get($palette-monochromes, gray), darker),
         alt:   pick_best_color(map-get(map-get($palette-monochromes, gray), darker), (#fff, #000)),
-        light: lighten(map-get(map-get($palette-monochromes, gray), darker), 60),
+        light: lighten(map-get(map-get($palette-monochromes, gray), darker), 60 - $darken-factor),
         dark:  map-get(map-get($palette-monochromes, gray), darker),
         flash: map-get(map-get($palette-monochromes, gray), darker)
     ),
