--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -63,7 +63,8 @@
           "id"    : "colours",
           "label" : "Colours",
           "href"  : "?tab=colours",
-          "src"   : tab_colours
+          "src"   : tab_colours,
+          "active": true
         },
         {
           "id"    : "buttons",
