Add appended/prepended support for select/select2

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -49,8 +49,7 @@
         {
           "id"    : "dropzone",
           "label" : "Dropzone",
-          "src"   : tab_dropzone,
-          "active": true
+          "src"   : tab_dropzone
         },
         {
           "id"    : "date",
@@ -80,7 +79,8 @@
         {
           "id"    : "select",
           "label" : "Select",
-          "src"   : tab_select
+          "src"   : tab_select,
+          "active": true
         },
         {
           "id"    : "select2",
