more masterswitch debugging

--- a/views/lexicon/patterns/masterswitch/index.html.twig
+++ b/views/lexicon/patterns/masterswitch/index.html.twig
@@ -20,8 +20,7 @@
         {
             "id"    : "masterswitch",
             "label" : "Masterswitch (disabled)",
-            "src"   : tab_disabled,
-            "active": true
+            "src"   : tab_disabled
         },
         {
             "id"    : "masterswitch-enabled",
@@ -29,12 +28,13 @@
             "src"   : tab_enabled
         },
         {
-            "id"    : "masterswitch",
+            "id"    : "masterswitch-disabled-form-wrapping-ms",
             "label" : "Masterswitch (disabled) form wrapping",
-            "src"   : tab_disabled_form_wrapper
+            "src"   : tab_disabled_form_wrapper,
+            "active": true
         },
         {
-            "id"    : "masterswitch",
+            "id"    : "masterswitch-enabled-form-wrapping-ms",
             "label" : "Masterswitch (enabled) form wrapping",
             "src"   : tab_enabled_form_wrapper
         }
