--- a/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
@@ -7,12 +7,12 @@
 }}
 
     <div class="masterswitch">
-
+    
         {{
             form.toggle_switch({
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
-                'id': 'toggletest'
+                'id': 'toggletest4'
             })
         }}
 
