--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
@@ -11,7 +11,7 @@
             form.toggle_switch({
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
-                'id': 'toggletest',
+                'id': 'toggletest3',
                 'checked': true
             })
         }}
