--- a/views/lexicon/patterns/masterswitch/masterswitch.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch.html.twig
@@ -8,7 +8,7 @@
             form.toggle_switch({
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
-                'id': 'toggletest'
+                'id': 'toggletest1'
             })
         }}
 
