--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
@@ -8,7 +8,7 @@
             form.toggle_switch({
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
-                'id': 'masterswitch-foo',
+                'id': 'masterswitch2',
                 'checked': true
             })
         }}
