Try removing code which wraps/unwraps disabled masterswitches

--- a/views/lexicon/patterns/masterswitch/index.html.twig
+++ b/views/lexicon/patterns/masterswitch/index.html.twig
@@ -25,13 +25,13 @@
         {
             "id"    : "masterswitch-enabled",
             "label" : "Masterswitch (enabled)",
-            "src"   : tab_enabled
+            "src"   : tab_enabled,
+            "active": true
         },
         {
             "id"    : "masterswitch-disabled-form-wrapping-ms",
             "label" : "Masterswitch (disabled) form wrapping",
-            "src"   : tab_disabled_form_wrapper,
-            "active": true
+            "src"   : tab_disabled_form_wrapper
         },
         {
             "id"    : "masterswitch-enabled-form-wrapping-ms",
